--- a/package.json
+++ b/package.json
@@ -3,22 +3,29 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "nodemon ./bin/www"
+    "start": "nodemon ./bin/www",
+    "createDB": "psql postgres -d codecademy_ecommerce_rest_api_v2 -f ./db/createDatabase.sql",
+    "testAll": "mocha"
   },
   "dependencies": {
+    "bcrypt": "^5.0.1",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
     "debug": "~2.2.0",
-    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "~4.13.1",
-    "jade": "~1.11.0",
+    "express-flash": "^0.0.2",
+    "express-session": "^1.17.2",
     "morgan": "~1.6.1",
+    "passport": "^0.5.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
     "chai": "^4.3.4",
     "chai-http": "^4.3.0",
+    "dotenv": "^10.0.0",
     "mocha": "^9.1.3",
     "nodemon": "^2.0.15"
   }
