--- a/package.json
+++ b/package.json
@@ -17,13 +17,13 @@
     "express": "~4.13.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
+    "js-yaml": "^4.1.0",
     "morgan": "~1.6.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "serve-favicon": "~2.3.0",
-    "swagger-ui-express": "^4.1.6",
-    "yamljs": "^0.3.0"
+    "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
     "chai": "^4.3.4",
