--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "js-yaml": "^4.1.0",
+    "method-override": "^3.0.0",
     "morgan": "~1.6.1",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0",
