--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "bcrypt": "^5.0.1",
     "body-parser": "~1.13.2",
     "cookie-parser": "~1.3.5",
+    "cors": "^2.8.5",
     "debug": "~2.2.0",
     "ejs": "^3.1.6",
     "express": "~4.13.1",
