--- a/package.json
+++ b/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "startDev": "nodemon ./bin/www",
+    "start": "node ./index.js",
+    "startDev": "nodemon ./index.js",
     "createDB": "psql postgres -d codecademy_ecommerce_rest_api_v2 -f ./db/createDatabase.sql",
     "testAll": "mocha"
   },
