--- a/package.json
+++ b/package.json
@@ -4,18 +4,20 @@
   "private": true,
   "scripts": {
     "start": "node ./index.js",
-    "startDev": "nodemon ./index.js",
+    "dev": "nodemon ./index.js",
     "createDB": "psql postgres -d codecademy_ecommerce_rest_api_v2 -f ./db/createDatabase.sql",
     "testAll": "mocha"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
     "body-parser": "~1.13.2",
+    "connect-flash": "^0.1.1",
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
     "debug": "~2.2.0",
     "ejs": "^3.1.6",
     "express": "~4.13.1",
+    "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
     "express-session": "^1.17.2",
     "js-yaml": "^4.1.0",
