--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "codecademy-ecommerce-rest-api-v2",
   "version": "0.0.0",
   "private": true,
+  "main": "index.js",
   "scripts": {
     "start": "node ./index.js",
     "dev": "nodemon ./index.js",
