--- a/package.json
+++ b/package.json
@@ -16,10 +16,11 @@
     "cookie-parser": "~1.3.5",
     "cors": "^2.8.5",
     "debug": "~2.2.0",
-    "ejs": "^3.1.6",
+    "ejs": "^2.6.1",
     "express": "~4.13.1",
     "express-ejs-layouts": "^2.5.1",
     "express-flash": "^0.0.2",
+    "express-partials": "^0.3.0",
     "express-session": "^1.17.2",
     "js-yaml": "^4.1.0",
     "method-override": "^3.0.0",
