--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "method-override": "^3.0.0",
     "morgan": "~1.6.1",
     "passport": "^0.5.0",
+    "passport-google-oauth": "^2.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "serve-favicon": "~2.3.0",
