--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "morgan": "~1.6.1",
     "passport": "^0.5.0",
     "passport-google-oauth20": "^2.0.0",
+    "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "serve-favicon": "~2.3.0",
