--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "passport-local": "^1.0.0",
     "pg": "^8.7.1",
     "serve-favicon": "~2.3.0",
+    "stripe": "^8.195.0",
     "swagger-ui-express": "^4.1.6"
   },
   "devDependencies": {
