--- a/package.json
+++ b/package.json
@@ -2,13 +2,14 @@
   "name": "codecademy-ecommerce-rest-api-v2",
   "version": "0.0.0",
   "private": true,
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
-    "start": "node ./index.js",
-    "dev": "nodemon ./index.js",
+    "start": "node ./app.js",
+    "dev": "nodemon ./app.js",
     "createDB": "psql postgres -d codecademy_ecommerce_rest_api_v2 -f ./db/createDatabase.sql",
     "insertData": "psql postgres -d codecademy_ecommerce_rest_api_v2 -f ./db/insertTestData.sql",
-    "testAll": "mocha"
+    "test": "mocha -w",
+    "testOnce": "mocha -b --exit"
   },
   "dependencies": {
     "bcrypt": "^5.0.1",
@@ -40,6 +41,7 @@
     "chai-http": "^4.3.0",
     "dotenv": "^10.0.0",
     "mocha": "^9.1.3",
-    "nodemon": "^2.0.15"
+    "nodemon": "^2.0.15",
+    "supertest": "^6.2.2"
   }
 }
